[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pychonet"
version = "2.7.0"
description = "A library for interfacing via the ECHONETlite protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Scott Phillips", email = "scotty.phillips@hotmail.com"}
]
keywords = ["echonet", "smart-home", "iot", "asyncio", "ECHONET Lite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = ["deprecated"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "mypy", "pre-commit"]

[project.urls]
Homepage = "https://github.com/scottyphillips/pychonet"
Repository = "https://github.com/scottyphillips/pychonet"
Documentation = "https://github.com/scottyphillips/pychonet"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
disable_error_code = ["operator", "union-attr", "index", "return-value", "arg-type", "str-bytes-safe", "assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.flake8]
max-complexity = 25
doctests = true
ignore = ["E501", "W503", "E203", "D202", "W504"]
noqa-require-code = true
exclude = [".venv", ".git", ".tox", "docs", "venv", "bin", "lib", "deps", "build"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
known_first_party = ["pychonet"]

[tool.coverage.run]
branch = true
source = ["pychonet"]
omit = ["*/lib/*", "*/bin/*", "*/test*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "import ",
]

[tool.setuptools]
packages = ["pychonet", "pychonet.lib"]
license-files = ["LICENSE-MIT", "LICENSE-GPL"]
zip-safe = false